deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cleanarr
  namespace: cleanarr
spec:
  selector:
    app: cleanarr
  ports:
    - name: http
      port: 8089
      targetPort: http
