deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cleanarr
  namespace: cleanarr
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: cleanarr.neelov.family
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cleanarr
                port:
                  number: 8089
